objects/Budget__c.object
<CustomObject>
    <description>To store budget-related information used to create a detailed budget plan for clients.</description>
    <fields>
        <fullName>ActualAFDC__c</fullName>
        <label>AFDC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualAttorney__c</fullName>
        <label>Actual Attorney</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualBalance__c</fullName>
        <formula>ActualTotalMonthlyIncome__c -  TotalActualCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualBonuses__c</fullName>
        <label>Bonuses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualCable__c</fullName>
        <label>Actual Cable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualCharity1__c</fullName>
        <label>Actual Charity 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualCharity2__c</fullName>
        <label>Actual Charity 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualCharity3__c</fullName>
        <label>Actual Charity 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualChildSupport__c</fullName>
        <label>Child Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualClothing__c</fullName>
        <label>Actual Clothing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualComissions__c</fullName>
        <label>Comissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualConcerts__c</fullName>
        <label>Actual Concerts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualCreditCollections__c</fullName>
        <label>Actual Credit Collections</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualCreditcard1__c</fullName>
        <label>Actual Credit card1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualCreditcard2__c</fullName>
        <label>Actual Credit card2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualCreditcard3__c</fullName>
        <label>Actual Credit card3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualDiningout__c</fullName>
        <label>Actual Dining out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualDrycleaning__c</fullName>
        <label>Actual Dry cleaning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualEducation__c</fullName>
        <label>Education</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualElectricity__c</fullName>
        <label>Actual Electricity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualEmployment__c</fullName>
        <label>Actual Employment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualFederal__c</fullName>
        <label>Actual Federal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualFood__c</fullName>
        <label>Actual Food</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualFuel__c</fullName>
        <label>Actual Fuel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualGas__c</fullName>
        <label>Actual Gas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualGroceries__c</fullName>
        <label>Actual Groceries</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualGrooming__c</fullName>
        <label>Actual Grooming</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualHairNails__c</fullName>
        <label>Actual Hair Nails</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualHealthclub__c</fullName>
        <label>Actual Health club</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualHomeEquityLine__c</fullName>
        <label>Actual Home Equity Line</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualHomeOwnerAssoc__c</fullName>
        <label>Actual Home Owner Assoc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualHomeownerRentersInsurance__c</fullName>
        <label>Actual Homeowner/Renters Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualInsurance__c</fullName>
        <label>Actual Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualInterestDividen__c</fullName>
        <label>Interest &amp; Dividen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualInvestmentaccount__c</fullName>
        <label>Actual Investment account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualLicensing__c</fullName>
        <label>Actual Licensing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualLivetheater__c</fullName>
        <label>Actual Live theater</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualLocal__c</fullName>
        <label>Actual Local</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualMaintenanceOrRepair__c</fullName>
        <label>Actual Maintenance or Repair</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualMaintenance__c</fullName>
        <label>Actual Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualMonthlyIncomeAlimony__c</fullName>
        <label>Alimony</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualMortgageOrRent__c</fullName>
        <label>Actual Mortgage or Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualMovies__c</fullName>
        <label>Actual Movies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualMusicplatforms__c</fullName>
        <label>Actual Music platforms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualNetRentalIncome__c</fullName>
        <label>Net Rental Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualNightout__c</fullName>
        <label>Actual Night out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualOrganizationduesorfees__c</fullName>
        <label>Actual Organization dues or fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualOther__c</fullName>
        <label>Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualOvertime__c</fullName>
        <label>Overtime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualPaymentsonlienorjudgment__c</fullName>
        <label>Actual Payments on lien or judgment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualPersonal__c</fullName>
        <label>Actual Personal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualPhone__c</fullName>
        <label>Actual Phone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualRetirementaccount__c</fullName>
        <label>Actual Retirement account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualSSI__c</fullName>
        <label>SSI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualSportingevents__c</fullName>
        <label>Actual Sporting events</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualState__c</fullName>
        <label>Actual State</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualStudent__c</fullName>
        <label>Actual Student</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualSupplies__c</fullName>
        <label>Actual Supplies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualTotalMonthlyIncome__c</fullName>
        <formula>(ActualEmployment__c + 
ActualOvertime__c + 
ActualInterestDividen__c + 
ActualNetRentalIncome__c + 
ActualBonuses__c + 
ActualComissions__c + 
ActualSSI__c + 
ActualChildSupport__c + 
ActualAFDC__c + 
ActualMonthlyIncomeAlimony__c + 
ActualUnemployment__c + 
ActualOther__c) - ActualWithholding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Total Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualToys__c</fullName>
        <label>Actual Toys</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualUnemployment__c</fullName>
        <label>Unemployment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualVehiclePayment__c</fullName>
        <label>Actual Vehicle Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualWasteRemova__c</fullName>
        <label>Actual Waste Removal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualWaterAndSewer__c</fullName>
        <label>Actual Water and Sewer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualWithholding__c</fullName>
        <label>Withholding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alimony_Difference__c</fullName>
        <formula>ProjectedMonthlyIncomeAlimony__c - ActualMonthlyIncomeAlimony__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alimony Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AttorneyDifference__c</fullName>
        <formula>ProjectedAttorney__c - ActualAttorney__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attorney Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonuses_Difference__c</fullName>
        <formula>ProjectedBonuses__c - ActualBonuses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonuses Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CableDiffrence__c</fullName>
        <formula>ProjectedCable__c -  ActualCable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cable Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charity1Difference__c</fullName>
        <formula>ProjectedCharity1__c - ActualCharity1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charity 1 Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charity2Difference__c</fullName>
        <formula>ProjectedCharity2__c - ActualCharity2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charity 2 Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charity3Difference__c</fullName>
        <formula>ProjectedCharity3__c - ActualCharity3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charity 3 Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Child_Support_Difference__c</fullName>
        <formula>ProjectedChildSupport__c - ActualChildSupport__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Support Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClientCase__c</fullName>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ClothingDifference__c</fullName>
        <formula>ProjectedClothing__c - ActualClothing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clothing Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissions_Difference__c</fullName>
        <formula>ProjectedComissions__c - ActualComissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commissions Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConcertsDifference__c</fullName>
        <formula>ProjectedConcerts__c - ActualConcerts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concerts Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreditCollectionsDifference__c</fullName>
        <formula>ProjectedCreditCollections__c  - ActualCreditCollections__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Collections Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Creditcard1Difference__c</fullName>
        <formula>ProjectedCreditcard1__c - ActualCreditcard1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit card1 Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Creditcard2Difference__c</fullName>
        <formula>ProjectedCreditcard2__c - ActualCreditcard2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit card2 Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Creditcard3Difference__c</fullName>
        <formula>ProjectedCreditcard3__c - ActualCreditcard3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit card3 Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Difference__c</fullName>
        <formula>ProjectedBalance__c -  ActualBalance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiningoutDifference__c</fullName>
        <formula>ProjectedDiningout__c -  ActualDiningout__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dining out Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DrycleaningDifference__c</fullName>
        <formula>ProjectedDrycleaning__c - ActualDrycleaning__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dry cleaning Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EducationDifference__c</fullName>
        <formula>ProjectedEducation__c  - ActualEducation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Education Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ElectricityDiffrence__c</fullName>
        <formula>ProjectedElectricity__c - ActualElectricity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electricity Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employment_Difference__c</fullName>
        <formula>ProjectedEmployment__c - ActualEmployment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employment Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EntertainmentActualCost__c</fullName>
        <formula>ActualNightout__c + 
ActualMusicplatforms__c + 
ActualMovies__c + 
ActualConcerts__c + 
ActualSportingevents__c + 
ActualLivetheater__c + 
EntertainmentActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entertainment Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EntertainmentActualOther__c</fullName>
        <label>Entertainment Actual Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EntertainmentDifference__c</fullName>
        <formula>EntertainmentProjectedCost__c - EntertainmentActualCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entertainment Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EntertainmentOtherDifference__c</fullName>
        <formula>EntertainmentProjectedOther__c - EntertainmentActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entertainment Other Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EntertainmentProjectedCost__c</fullName>
        <formula>ProjectedNightout__c +
ProjectedMusicplatforms__c +
ProjectedMovies__c +
ProjectedConcerts__c +
ProjectedSportingevents__c +
ProjectedLivetheater__c +
EntertainmentProjectedOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entertainment Projected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EntertainmentProjectedOther__c</fullName>
        <label>Entertainment Projected Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalDifference__c</fullName>
        <formula>ProjectedFederal__c - ActualFederal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FoodActualCost__c</fullName>
        <formula>ActualGroceries__c +  ActualDiningout__c +  FoodActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FoodActualOther__c</fullName>
        <label>Food Actual Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FoodDifference__c</fullName>
        <formula>FoodProjectedCost__c - FoodActualCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FoodOtherDifference__c</fullName>
        <formula>FoodProjectedOther__c -  FoodActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food Other Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FoodProjectedCost__c</fullName>
        <formula>ProjectedGroceries__c +  ProjectedDiningout__c +  FoodProjectedOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food Projected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FoodProjectedOther__c</fullName>
        <label>Food Projected Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FuelDiffrence__c</fullName>
        <formula>ProjectedFuel__c -  ActualFuel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fuel Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GasDiffrence__c</fullName>
        <formula>ProjectedGas__c -  ActualGas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gas Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GiftsandDonationsActualCost__c</fullName>
        <formula>ActualCharity1__c + 
ActualCharity2__c + 
ActualCharity3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gifts and Donations Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GiftsandDonationsDifference__c</fullName>
        <formula>GiftsandDonationsProjectedCost__c - GiftsandDonationsActualCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gifts and Donations Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GiftsandDonationsProjectedCost__c</fullName>
        <formula>ProjectedCharity1__c + 
ProjectedCharity2__c + 
ProjectedCharity3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gifts and Donations Projected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GroceriesDifference__c</fullName>
        <formula>ProjectedGroceries__c -  ActualGroceries__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Groceries Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GroomingDifference__c</fullName>
        <formula>ProjectedGrooming__c - ActualGrooming__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grooming Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HairNailsDifference__c</fullName>
        <formula>ProjectedHairNails__c - ActualHairNails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hair Nails Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HealthclubDifference__c</fullName>
        <formula>ProjectedHealthclub__c - ActualHealthclub__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health club Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HomeEquityLineDifference__c</fullName>
        <formula>ProjectedHomeEquityLine__c   - ActualHomeEquityLine__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Equity Line Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HomeOwnerAssocDifference__c</fullName>
        <formula>ProjectedHomeOwnerAssoc__c   - ActualHomeOwnerAssoc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Owner Assoc. Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HomeownerRentersInsuranceDifference__c</fullName>
        <formula>ProjectedHomeownerRentersInsurance__c  - ActualHomeownerRentersInsurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Homeowner/Renters Insurance Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HousingActualCost__c</fullName>
        <formula>ActualMortgageOrRent__c + ActualPhone__c + ActualElectricity__c +  ActualGas__c + ActualWaterAndSewer__c +  ActualWasteRemova__c +  ActualCable__c + ActualMaintenanceOrRepair__c + ActualSupplies__c + HousingActualOther__c +
ActualHomeOwnerAssoc__c
+
ActualHomeEquityLine__c
+ ActualHomeownerRentersInsurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Housing Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HousingActualOther__c</fullName>
        <label>Housing Actual Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HousingDiffrence__c</fullName>
        <formula>HousingProjectedCost__c -  HousingActualCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Housing Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HousingOtherDiffrence__c</fullName>
        <formula>HousingProjectedOther__c -  HousingActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Housing Other Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HousingProjectedCost__c</fullName>
        <formula>ProjectedMortgageOrRent__c +  ProjectedPhone__c +  ProjectedElectricity__c + ProjectedGas__c +  ProjectedWaterAndSewer__c +  ProjectedCable__c +  ProjectedWasteRemoval__c + ProjectedMaintenanceOrRepair__c + ProjectedSupplies__c +  HousingProjectedOther__c + ProjectedHomeOwnerAssoc__c
+
ProjectedHomeEquityLine__c
+
ProjectedHomeownerRentersInsurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Housing Projected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HousingProjectedOther__c</fullName>
        <label>Housing Projected Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InsuranceDiffrence__c</fullName>
        <formula>ProjectedInsurance__c -  ActualInsurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Dividend_Difference__c</fullName>
        <formula>ProjectedInterestDividen__c - ActualInterestDividen__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest &amp; Dividend Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvestmentaccountDifference__c</fullName>
        <formula>ProjectedInvestmentaccount__c - ActualInvestmentaccount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investment account Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LegalActualAlimony__c</fullName>
        <label>Legal Actual Alimony</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LegalActualCost__c</fullName>
        <formula>ActualAttorney__c + 
LegalActualAlimony__c + 
ActualPaymentsonlienorjudgment__c + 
LegalActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LegalActualOther__c</fullName>
        <label>Legal Actual Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LegalAlimonyDifference__c</fullName>
        <formula>LegalProjectedAlimony__c - LegalActualAlimony__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Alimony Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LegalDifference__c</fullName>
        <formula>LegalProjectedCost__c - LegalActualCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>